--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "ify-loader": "^1.1.0",
+    "vis": "^4.21.0",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.0",
     "vue-router": "^3.0.1"
